# Test-Task

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  est Task.txt  main.py  pyproject.toml
config/: celery.py  settings.py  urls.py
payouts/: admin.py  models.py  schemas.py  serializers.py  services.py  tasks.py  urls.py  validators.py  views.py
payouts/management/commands/: csu.py  load_mock_data.py  start.py
payouts/management/data/: payouts.csv
payouts/migrations/: 0001_initial.py
payouts/tests/: test_api.py
